--- a/src/App.css
+++ b/src/App.css
@@ -8,37 +8,11 @@
   );
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 header {
   background-color: rgba(6, 226, 255, 0.596);
   font-size: 10vw;
+  text-align: center;
+  padding: 10px;
 }
 div.headerMenu {
   display: flex;
@@ -65,9 +39,48 @@ img {
   width: 250px;
   margin: 12.5px;
 }
-a {
+link {
   text-decoration: none;
 }
 p {
   margin: 20px;
+}
+h4 {
+  text-align: center;
+}
+.photoDetails {
+  margin: 35px;
+}
+a {
+  text-align: center;
+}
+@media (min-width: 375px) {
+  .photoDetails {
+    margin: 65px;
+  }
+}
+@media (min-width: 760px) {
+  .photoDetails {
+    margin: 50px 250px 30px 250px;
+  }
+}
+@media (min-width: 1020px) {
+  .photoDetails {
+    margin: 50px 400px 30px 400px;
+  }
+}
+@media (min-width: 1280px) {
+  .photoDetails {
+    margin: 20px 520px 10px 520px;
+  }
+}
+@media (min-width: 1280px) {
+  .photoDetails {
+    margin: 20px 520px 10px 520px;
+  }
+}
+@media (min-width: 1890px) {
+  .photoDetails {
+    margin: 20px 820px 10px 820px;
+  }
 }
